--- a/IFM/index.html
+++ b/IFM/index.html
@@ -13,7 +13,7 @@
                 <tr>
                     <td style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #343434; font-size: larger"><span id="sis">THE INSTITUTE OF FINANCE MANAGEMENT</span></td>
                     <td align="right" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: larger;"><span id="ifm"><a style="color: dodgerblue;" href="https://www.ifm.ac.tz/"><span class="ifm">Go to IFM website</span></a></span></td>
-                    <td><img src="img/logo.png" width="90px" height="90px" alt="Ifm logo"></td>
+                    <td><img src="img/logo.png" width="90px" height="90px"></td>
                 </tr>
             </table>
         </div>
