--- a/Galilea/maintenance.html
+++ b/Galilea/maintenance.html
@@ -20,12 +20,12 @@
 <body id="home">
 	<!--Navigation-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark" id="main-header" >
-				<a class="navbar-brand ml-3" href="#home"><span class="brand btn btn-outline-light">Galilea</span></a>
+				<a class="navbar-brand ml-2" href="#home"><span class="brand btn btn-outline-light">Galilea</span></a>
 				<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
 					aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="collapsibleNavId">
-					<ul class="navbar-nav ml-auto mt-2 mt-lg-0 mr-3">
+					<ul class="navbar-nav ml-auto mt-2 mt-lg-0 mr-2">
 						<li class="nav-item">
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
@@ -56,7 +56,7 @@
   <!--Maintenance Services-->
   <section class="py-5">
       <div class="container">
-          <h1 class="display-4 text-center text-secondary pt-2 pb-3">Maintenance</h1>
+          <h1 class="display-4 text-center text-secondary pt-2 pb-3" style="font-size:56vw">Maintenance Services</h1>
           <div class="jumbotron">
               <p class="px-2" style="line-height: 1.7rem">
                   Maintenance is a crucial in keeping the system readiness at optimum operating performance. Compliance to the relevant legislation, insurance requirements and manufacturer guidelines, requires maintenances to be carried out at specific time intervals to ensure that all equipment are functioning correctly.
