--- a/Galilea/maintenance.html
+++ b/Galilea/maintenance.html
@@ -55,8 +55,8 @@
 
   <!--Maintenance Services-->
   <section class="py-5">
+      <h1 class="display-4 text-center text-secondary pt-2 pb-3">Maintenance Services</h1>
       <div class="container">
-          <h1 class="display-4 text-center text-secondary pt-2 pb-3" style="font-size:12vw">Maintenance Services</h1>
           <div class="jumbotron">
               <p class="px-2" style="line-height: 1.7rem">
                   Maintenance is a crucial in keeping the system readiness at optimum operating performance. Compliance to the relevant legislation, insurance requirements and manufacturer guidelines, requires maintenances to be carried out at specific time intervals to ensure that all equipment are functioning correctly.
