--- a/Galilea/index.html
+++ b/Galilea/index.html
@@ -69,7 +69,7 @@
         <div class="carousel-item carousel-image-1 active">
           <div class="container">
             <div class="carousel-caption mb-2 text-left">
-              <h1 class="display-3 text-dark">Design, supply and installation of simple to complex electronic surveillance</h1>
+              <h1 class="display-3 text-dark">Design, supply and installation of electronic surveillance</h1>
             </div>
           </div>
         </div> 
