--- a/Galilea/index.html
+++ b/Galilea/index.html
@@ -19,6 +19,12 @@
 		div.card:hover {
 			background:#d3d3d3;
 		}
+		
+		@media (max-width: 500px) {
+			#design {
+			font-size: 10px;
+			}
+		}
 	</style>
 </head>
 <body id="home">
@@ -69,7 +75,7 @@
         <div class="carousel-item carousel-image-1 active">
           <div class="container">
             <div class="carousel-caption mb-2 text-left">
-              <h1 class="display-3 text-dark">Design, supply and installation of electronic surveillance</h1>
+              <h1 class="display-3 text-dark" id="design">Design, supply and installation of simple to complex electronic surveillance</h1>
             </div>
           </div>
         </div> 
