--- a/Galilea/index.html
+++ b/Galilea/index.html
@@ -75,7 +75,7 @@
         <div class="carousel-item carousel-image-1 active">
           <div class="container">
             <div class="carousel-caption mb-2 text-left">
-              <h1 class="display-3 text-light" id="design">Design, supply and installation of simple to complex electronic surveillance</h1>
+              <h1 class="display-3 text-muted" id="design">Design, supply and installation of simple to complex electronic surveillance</h1>
             </div>
           </div>
         </div> 
