--- a/Galilea/index.html
+++ b/Galilea/index.html
@@ -119,7 +119,7 @@
 
   <!--Security cameras-->
   <section class="py-5">
-	  <h1 class="display-4 text-center text-dark">Security Cameras</h1>
+	  <h1 class="display-4 text-center text-muted">Security Cameras</h1>
 	  <div class="container">
 		  <div class="row pt-3 pb-5">
 			  <div class="col-md-12 col-lg-4">
