--- a/Galilea/fire_safety.html
+++ b/Galilea/fire_safety.html
@@ -20,99 +20,98 @@
 <body id="fire">
 	<!--Navigation-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark" id="main-header" >
-				<a class="navbar-brand ml-2" href="#fire"><span class="brand btn btn-outline-light">Galilea</span></a>
-				<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-					aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span></button>
-				<div class="collapse navbar-collapse" id="collapsibleNavId">
-					<ul class="navbar-nav ml-auto mt-2 mt-lg-0 mr-2">
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="about.html">About</a>
-						</li>
-						<li class="nav-item">
-								<a class="nav-link" href="security.html">Security</a>
-						</li>
-						<li class="nav-item active">
-								<a class="nav-link" href="#fire">Fire Safety</a>
-                        </li>
-                        <li class="nav-item">
-								<a class="nav-link" href="home_auto.html">Home automation</a>
-						</li>
-						<li class="nav-item">
-								<a class="nav-link" href="maintenance.html">Maintenance</a>
-						</li>
-						<li class="nav-item">
-								<a class="nav-link" href="contact.php">Contact</a>
-						</li>
-					</ul>
-					
-				</div>
-			</nav>
+			<a class="navbar-brand ml-2" href="#fire"><span class="brand btn btn-outline-light">Galilea</span></a>
+			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="collapsibleNavId">
+				<ul class="navbar-nav ml-auto mt-2 mt-lg-0 mr-2">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="security.html">Security</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="#fire">Fire Safety</a>
+                    </li>
+                    <li class="nav-item">
+						<a class="nav-link" href="home_auto.html">Home automation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="maintenance.html">Maintenance</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.php">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
   <!--Fire Safety and Protection-->
   <section class="py-5">
 	  <div class="container">
-          <h1 class="display-4 text-center text-secondary pt-4" id="text" title="Safety">Fire Safety and Protection</h1>
+		  <h1 class="display-4 text-center text-secondary pt-4" id="text" title="Safety">Fire Safety and Protection</h1>
 		  <div class="row py-3">
 			  <div class="col-md-12 col-lg-4">
-				    <div class="card p-3 mt-4">
-							<h2 class="card-title text-center pt-5 pb-2">Auditing of fire systems</h2>
-							<img src="img/Fire-Protection-Systems.png" class="card-img-top img-fluid" alt="" width="100" height="100">
-							<div class="card-body">
-								<p class="px-2" style="line-height: 1.7rem">
-									1. Review of installation against the requirement of local and international fire codes, including assessment on conformance and compliance to the relevant standards.
-								</p>
-								<p class="px-2" style="line-height: 1.7rem">
-									2. Auditing of performance and adequacy of fire safety systems.
-								</p>
-								<p class="px-2" style="line-height: 1.7rem">
-									3. Functionality testing on performance of the installed fire system.
-								</p>
-								<p class="px-2" style="line-height: 1.7rem">
-									4. Statutory inspections and issuing of conformance certificate.
-								</p>
-							</div>
-						</div>
+				  <div class="card p-3 mt-4">
+					  <h2 class="card-title text-center pt-5 pb-2">Auditing of fire systems</h2>
+					  <img src="img/Fire-Protection-Systems.png" class="card-img-top img-fluid" alt="" width="100" height="100">
+					  <p class="px-2" style="line-height: 1.7rem">
+						1. Review of installation against the requirement of local and international fire codes, including assessment on conformance and compliance to the relevant standards.
+					  </p>
+					  <p class="px-2" style="line-height: 1.7rem">
+						2. Auditing of performance and adequacy of fire safety systems.
+					  </p>
+					  <p class="px-2" style="line-height: 1.7rem">
+						3. Functionality testing on performance of the installed fire system.
+					  </p>
+					  <p class="px-2" style="line-height: 1.7rem">
+						4. Statutory inspections and issuing of conformance certificate.
+					  </p>
+					  <br>
+					  <br>
+					  <br>
+					  <br>
+					  <br>
+					  <br>
+				  </div>
 			  </div>
 			  <div class="col-md-12 col-lg-4">
-				    <div class="card p-3 mt-4">
-							<h2 class="card-title text-center py-5">Risk assessment</h2>
-							<img src="img/fight2.png" class="card-img-top img-fluid" alt="" width="100" height="100">
-							<div class="card-body">
-								<p class="px-2" style="line-height: 1.7rem">
-									Our experienced team of fire experts in risk assessment will explain in detail the potential risks surrounding your business.
-								</p>
-								<p class="px-2" style="line-height: 1.7rem">
-									1. Assessment of the level of compliance against the minimum fire safety requirements as contained in the applicable regulations and standards.
-								</p>
-								<p class="px-2" style="line-height: 1.7rem">
-									2. Identification of fire hazard, fire hazard assessment and evaluation.
-								</p>
-								<p class="px-2" style="line-height: 1.7rem">
-									3. Analysis of the costs to your business should you fall short of the minimum requirements.
-								</p>
-								<p class="px-2" style="line-height: 1.7rem">
-									4. Rational fire design and emergency plan to make your business premises safer, by mitigating risks associated with starting and spreading of fire thus protecting human life and property.
-								</p>
-							</div>
-						</div>
+				  <div class="card p-3 mt-4">
+					  <h2 class="card-title text-center py-5">Risk assessment</h2>
+					  <img src="img/fight2.png" class="card-img-top img-fluid" alt="" width="100" height="100">
+					  <p class="px-2" style="line-height: 1.7rem">
+						Our experienced team of fire experts in risk assessment will explain in detail the potential risks surrounding your business.
+					  </p>
+					  <p class="px-2" style="line-height: 1.7rem">
+						1. Assessment of the level of compliance against the minimum fire safety requirements as contained in the applicable regulations and standards.
+					  </p>
+					  <p class="px-2" style="line-height: 1.7rem">
+						2. Identification of fire hazard, fire hazard assessment and evaluation.
+					  </p>
+					  <p class="px-2" style="line-height: 1.7rem">
+						3. Analysis of the costs to your business should you fall short of the minimum requirements.
+					  </p>
+					  <p class="px-2" style="line-height: 1.7rem">
+						4. Rational fire design and emergency plan to make your business premises safer, by mitigating risks associated with starting and spreading of fire thus protecting human life and property.
+					  </p>
+				  </div>
 			  </div>
 			  <div class="col-md-12 col-lg-4">
-					<div class="card p-3 mt-4">
-							<h2 class="card-title text-center py-5">Design <br> and installation</h2>
-							<img src="img/fight3.png" class="card-img-top img-fluid" alt="" width="100" height="100">
-							<div class="card-body">
-								<p class="px-2 pt-2" style="line-height: 1.7rem">
-									Design, Supply and installation of the fire protection and safety systems to BS and NFPA codes requirements.
-								</p>
-								<p class="px-2" style="line-height: 1.7rem">
-									1. Fire Detection and Alarm SystemsAlarm management & Alarm monitoring solutionsVoice Evacuation and Public Address systemsClean Agent suppression systems eg. Novec-1230 gas fire suppression systems, FM200 gas fire suppression systems, DSPA Aerosol Generators, EXXFIRE Nitrogen Generators.Automatic Fire Sprinkler SystemFixed and Mobile Fire extinguishersFoams and Dry powder systemsFire Hydrants and Hose reelsExit & Emergency LightingsFire Doors, & Smoke curtainsFire Stopping/Fire Proofing MaterialsIntumiscent fire protection coating, vanish and paints.
-								</p>
-							</div>
-						</div>
+				  <div class="card p-3 mt-4">
+					  <h2 class="card-title text-center py-5">Design <br> and installation</h2>
+					  <img src="img/fight3.png" class="card-img-top img-fluid" alt="" width="100" height="100">
+					  <p class="px-2 pt-2" style="line-height: 1.7rem">
+						Design, Supply and installation of the fire protection and safety systems to BS and NFPA codes requirements.
+					  </p>
+					  <p class="px-2" style="line-height: 1.7rem">
+						1. Fire Detection and Alarm SystemsAlarm management & Alarm monitoring solutionsVoice Evacuation and Public Address systemsClean Agent suppression systems eg. Novec-1230 gas fire suppression systems, FM200 gas fire suppression systems, DSPA Aerosol Generators, EXXFIRE Nitrogen Generators.Automatic Fire Sprinkler SystemFixed and Mobile Fire extinguishersFoams and Dry powder systemsFire Hydrants and Hose reelsExit & Emergency LightingsFire Doors, & Smoke curtainsFire Stopping/Fire Proofing MaterialsIntumiscent fire protection coating, vanish and paints.
+					  </p>
+				  </div>
 			  </div>
 		  </div>
 	  </div>
@@ -125,14 +124,14 @@
 	  <div class="container">
 		  <div class="row">
 			  <div class="col-md-12 col-lg-6 align-self-center">
-					<h3>Fire safety</h3>
-					<p style="line-height: 1.7rem">Stay well protected and secured from all causes of fire and insecured enviroments by the best fire safety, protection and rescure tools provided by our company.
-					</p>
-					<button class="btn btn-outline-danger" data-target="#more" data-toggle="collapse">Read More</button>
-                    <p id="more" class="collapse" style="line-height: 1.7rem">
-                        <br>
-                        Fire safety is the set of practices intended to reduce the destruction caused by fire. Fire safety measures include those that are intended to prevent ignition of an uncontrolled fire, and those that are used to limit the development and effects of a fire after it starts.
-                    </p>
+				  <h3>Fire safety</h3>
+				  <p style="line-height: 1.7rem">Stay well protected and secured from all causes of fire and insecured enviroments by the best fire safety, protection and rescure tools provided by our company.
+				  </p>
+				  <button class="btn btn-outline-danger" data-target="#more" data-toggle="collapse">Read More</button>
+				  <p id="more" class="collapse" style="line-height: 1.7rem">
+					<br>
+                    Fire safety is the set of practices intended to reduce the destruction caused by fire. Fire safety measures include those that are intended to prevent ignition of an uncontrolled fire, and those that are used to limit the development and effects of a fire after it starts.
+                  </p>
 			  </div>
 			  <div class="col-md-12 col-lg-6 py-3 ">
 				  <img src="img/fire-extinguishers-2.png" alt="" class="img-fluid">
