Some more changes

--- a/Galilea/index.html
+++ b/Galilea/index.html
@@ -63,7 +63,7 @@
 			</nav>
 	
 	<!--SHOWCASE SLIDER-->
-  <section id="showcase" >
+  <section id="showcase">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li class="active" data-slide-to="0" data-target="#myCarousel"></li>
@@ -71,8 +71,8 @@
 		<li data-slide-to="2" data-target="#myCarousel"></li>
         <li data-slide-to="3" data-target="#myCarousel"></li>		
 	  </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item carousel-image-1 active">
+      <div class="carousel-inner ">
+        <div class="carousel-item carousel-image-1 active" style="height: 400px;">
           <div class="container">
             <div class="carousel-caption mb-2 text-left">
               <h1 class="display-3 text-muted" id="design">Design, supply and installation of simple to complex electronic surveillance</h1>
@@ -80,7 +80,7 @@
           </div>
         </div> 
 
-        <div class="carousel-item carousel-image-2">
+        <div class="carousel-item carousel-image-2" style="height: 400px;">
           <div class="container">
             <div class="carousel-caption text-center mb-5">
               <h1 class="display-3 text-danger" style="opacity: 0.9;">Electronic Security Solutions over insecurities</h1>
@@ -88,7 +88,7 @@
           </div>
         </div> 
 
-        <div class="carousel-item carousel-image-3">
+        <div class="carousel-item carousel-image-3" style="height: 400px;">
           <div class="container">
             <div class="carousel-caption mb-5 text-right">
               <h1 class="display-3 text-light">Fire safety and protection products</h1>
@@ -96,7 +96,7 @@
           </div>
 		</div>
 
-		<div class="carousel-item carousel-image-4">
+		<div class="carousel-item carousel-image-4" style="height: 400px;">
 			<div class="container">
 				<div class="carousel-caption mb-5 text-left">
 					<h1 class="display-3 text-warning" style="opacity: 0.9;">Auditing of fire safety systems</h1>
