--- a/Galilea/about.html
+++ b/Galilea/about.html
@@ -13,8 +13,6 @@
 	<style>
 		div.card {
 			border: none;
-		}
-		div.card:hover {
 			background: #f8f9fa;
 		}
 	</style>
@@ -57,11 +55,11 @@
 
   <!--About us-->
   <section class="py-5">
-	  <h1 class="display-4 text-center text-muted">Get to know us!</h1>
+	  <h1 class="display-4 text-center text-muted">Get to know us</h1>
 	  <div class="container">
 		  <div class="row py-5">
 			  <div class="col-md-12 col-lg-4">
-					<div class="card p-3">
+					<div class="card p-3 mt-3">
 							<h2 class="card-title text-center pt-5 pb-2">About Us</h2>
 							<img src="img/best-about-us-pages.jpg" class="card-img-top img-fluid" alt="" width="100" height="100">
 							<button class="btn btn-warning ml-2 my-2" data-target="#btn-1" data-toggle="collapse">Read More</button>
@@ -79,7 +77,7 @@
 						</div>
 			  </div>
 			  <div class="col-md-12 col-lg-4">
-					<div class="card p-3">
+					<div class="card p-3 mt-3">
 							<h2 class="card-title text-center pt-5 pb-2">Our Objectives</h2>
 							<img src="img/resolve-conflict.jpg" class="card-img-top img-fluid" alt="" width="100" height="100">
 							<button class="btn btn-outline-primary ml-2 my-2" data-toggle="collapse" data-target="#btn-2">Read More</button>
@@ -97,7 +95,7 @@
 						</div>
 			  </div>
 			  <div class="col-md-12 col-lg-4">
-					<div class="card p-3">
+					<div class="card p-3 mt-3">
 							<h2 class="card-title text-center pt-5 pb-2">Our Mission</h2>
 							<img src="img/collabo.jpg" class="card-img-top img-fluid" alt="" width="100" height="100">
 							<button class="btn btn-success ml-2 my-2" data-toggle="collapse" data-target="#btn-3">Read More</button>
