--- a/eKilimo/index.html
+++ b/eKilimo/index.html
@@ -16,7 +16,7 @@
 </head>
 <body id="home">
 	<!--Navigation-->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="main-header">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="main-header">
 		<a href="#home" class="navbar-brand"><img src="img/logo-small.png" width="50px" class="ml-2" id="logo" alt="logoKilimo"><span class="text-dark	" style="font-weight: bold;">e-</span><span class="lead" style="font-weight: bold">Kilimo</span></a>
 		<button class="navbar-toggler" data-toggle="collapse" data-target="#navLinkcollapse">
 			<span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
 		<div class="container">
 			<!--Jumbotron-->
 			<div class="">
-				<div class="jumbotron p-5" id="jumbotron">
+				<div class="jumbotron p-5 d-none d-lg-block" id="jumbotron">
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius laudantium magnam mollitia, odio commodi sequi eligendi. Dolorem, quod adipisci! Provident corrupti veritatis incidunt perspiciatis, optio consequatur vero vel culpa laborum.
 					Magnam soluta quasi quibusdam voluptatum doloremque nostrum distinctio illo odio similique, nulla praesentium doloribus eos amet optio provident accusamus eum, porro iure iste eius blanditiis. Fuga assumenda debitis consequatur vel.
 					Exercitationem unde adipisci rem laudantium magni, dolore itaque officia, saepe reiciendis inventore facilis nulla illo beatae temporibus corporis dolor molestiae alias soluta possimus cum voluptate voluptatibus a quis ut. Quae?
