--- a/web-kilimo/index.html
+++ b/web-kilimo/index.html
@@ -225,7 +225,7 @@
               <h4>Walter White</h4>
               <span>Chief Executive Officer</span>
               <div class="social">
-                <a href=""><i class="icofont-twitter"></i></a>
+                <a href="tel:0716491716"><i class="icofont-twitter"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-instagram"></i></a>
                 <a href=""><i class="icofont-linkedin"></i></a>
@@ -311,7 +311,7 @@
             <span><img src="assets/img/Tech-Africa.png" alt="" class="img-fluid py-3"></span>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus maiores fuga porro dolore deleniti ab eveniet est perferendis molestias doloremque suscipit esse neque ad corporis sapiente, laboriosam magnam consectetur possimus?
             </p>
-            <a href="" class="btn btn-success">USSD</a>
+            <a href="tel:*384*4614#" class="btn btn-success">USSD</a>
           </div>
 
         </div>
