I have made some changes

--- a/web-kilimo/index.html
+++ b/web-kilimo/index.html
@@ -60,7 +60,7 @@
           <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
             <h1>Pata Taarifa na Elimu, ukiwa umeunganishwa</h1>
             <h2>Yote kuhusu kilimo.</h2>
-            <a href="#" class="get-started"><i class="fas fa-play-circle fa-3x js-modal" data-video-id="iD27VpyQXG4"><span class="ml-3" style="float: right; margin-top: 13px; font-size: 20px;" id="watch">Angalia Video</span></i></a>
+            <a href="#" class="get-started"><i class="fas fa-play-circle fa-3x js-modal" data-video-id="githXaBemyI"><span class="ml-3" style="float: right; margin-top: 13px; font-size: 20px;" id="watch">Angalia Video</span></i></a>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
             <img src="assets/img/hero-img.png" class="img-fluid d-none d-md-block" alt="" width="530px">
@@ -227,11 +227,7 @@
               <h4>Walter White</h4>
               <span>Chief Executive Officer</span>
               <div class="social">
-<<<<<<< HEAD
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-=======
-                <a href="tel:0716491716"><i class="icofont-twitter"></i></a>
->>>>>>> 4a84f3d7d2ccaa1804f1a1710f86a082d461b2df
                 <a href=""><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
@@ -431,11 +427,7 @@
               mfumo huu ni mahususi maeneo ambayo Mtandao wa intaneti haujafika au haufanyi vizuri au kwa mkulima ambae hana uwezo wa kuifikia Kompyuta au Simu janja.
               Unaweza kupata huduma za kilimo kupitia Namba *384*4614#.
             </p>
-<<<<<<< HEAD
-            <a href="#*384*4614#" class="btn btn-success">USSD</a>
-=======
             <a href="tel:*384*4614#" class="btn btn-success">USSD</a>
->>>>>>> 4a84f3d7d2ccaa1804f1a1710f86a082d461b2df
           </div>
 
         </div>
