--- a/web-kilimo/index.html
+++ b/web-kilimo/index.html
@@ -427,7 +427,7 @@
               mfumo huu ni mahususi maeneo ambayo Mtandao wa intaneti haujafika au haufanyi vizuri au kwa mkulima ambae hana uwezo wa kuifikia Kompyuta au Simu janja.
               Unaweza kupata huduma za kilimo kupitia Namba *384*4614#.
             </p>
-            <a href="tel:*384*4614#" class="btn btn-success">USSD</a>
+            <a href="#*384*4614#" class="btn btn-success">USSD</a>
           </div>
 
         </div>
