--- a/web-kilimo/index.html
+++ b/web-kilimo/index.html
@@ -183,7 +183,7 @@
                   Programu Hizi zitalenga kumjengea uwezo mkulima aweze kufanya kilimo cha kisasa kwa kuona kutoka kwa wataalamu wetu wa kilimo na wakulima wenzao kupitia Rekodi za video.</p>
                   <p>Picha za video zenye maelekezo kwa vitendo zita patikana kupitia Chaneli yetu ya Youtube zikiwa na mauhudhui mbalimbali.
                 </p>
-                <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Soma Zaidi</a></div>
+                <div class="read-more"><a href="e-shamba.html"><i class="icofont-arrow-right"></i> Soma Zaidi</a></div>
               </div>
             </div>
           </div>
@@ -400,20 +400,20 @@
         <div class="row no-gutters">
 
           <div class="col-lg-4 box" data-aos="zoom-in">
-            <h3>E-kilimo web</h3>
+            <h3>e-Kilimo web</h3>
             <span><img src="assets/img/kilimo.jpg" alt="" class="img-fluid py-3"></span>
             <p>
-              e-Kilimo web ni kurasa zinazoweza kutazamwa kwa kutumia Kompyuta au simu janja kupita tovuto yetu ya <a href="https://www.ekilimo.or.tz">ekilimo</a>
+              e-Kilimo web ni kurasa zinazoweza kutazamwa kwa kutumia Kompyuta au simu janja kupita tovuto yetu ya <a href="https://www.ekilimo.or.tz">eKilimo</a>
               utaweza kupata taarifa, mafunzo na kutembelea Wadau, wazalishaji na mawakala wa pembejeo za kilimo nchini.
             </p>
-            <a href="https://www.ekilimo.or.tz" class="btn btn-success" data-toggle="tooltip" data-placement="bottom" title="Nenda kwa tovuti yetu ya ekilimo">E-kilimo</a>
+            <a href="https://www.ekilimo.or.tz" class="btn btn-success" data-toggle="tooltip" data-placement="bottom" title="Nenda kwa tovuti yetu ya ekilimo">e-Kilimo</a>
           </div>
 
           <div class="col-lg-4 box featured" data-aos="zoom-in">
             <h3>Android</h3>
-            <span><img src="assets/img/tech-agric.jpg" alt="" class="img-fluid py-3"></span>
+            <span><img src="assets/img/phone.jpg" alt="" class="img-fluid py-3"></span>
             <p>
-              Android, kupitia simu janja ya mkononi au Tablet unaweza kuingia Play store na kupakuwa <a hre="#" >Application yetu</a> (e-kilimo)
+              Android, kupitia simu janja ya mkononi au Tablet unaweza kuingia Play store na kupakuwa <a hre="#" >Application yetu</a> (e-Kilimo)
               nakuiweka katika simu yako.
               mfumo huu utampa mkulima urahisi zaidi wa kutumia Mifumo mingine ya e-Kilimo na kuweza kutumia jukwaa la mijadala ya kilimo.
             </p>
@@ -427,7 +427,7 @@
               mfumo huu ni mahususi maeneo ambayo Mtandao wa intaneti haujafika au haufanyi vizuri au kwa mkulima ambae hana uwezo wa kuifikia Kompyuta au Simu janja.
               Unaweza kupata huduma za kilimo kupitia Namba *384*4614#.
             </p>
-            <a href="tel:*384*4614#" class="btn btn-success">USSD</a>
+            <a href="tel:*384*4614#" class="btn btn-success" data-toggle="tooltip" data-placement="bottom" title="Tumia USSD">USSD</a>
           </div>
 
         </div>
@@ -485,7 +485,7 @@
                   <div class="validate"></div>
                 </div>
                 <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Barua pepe" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Barua pepe yako" data-rule="email" data-msg="Please enter a valid email" />
                   <div class="validate"></div>
                 </div>
               </div>
@@ -530,17 +530,15 @@
         <div class="row footer-newsletter justify-content-center">
           <div class="col-lg-6">
             <form action="" method="post">
-              <input type="email" name="email" placeholder="jaza barua pepe"><input type="submit" value="Jiunge">
+              <input type="email" name="email" placeholder="Andika barua pepe yako"><input type="submit" value="Jiunge">
             </form>
           </div>
         </div>
 
         <div class="social-links">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.youtube.com/channel/UC5n4_6n_FPTD3sUlpKqfcjQ" class="youtube"><i class="bx bxl-youtube"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
 
       </div>
@@ -548,12 +546,13 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; <span id="year"></span> Copyright <strong><span>e-kilimo</span></strong>. All Rights Reserved
+        &copy; <span id="year"></span> Copyright <strong><span>e-Kilimo</span></strong>. All Rights Reserved | Mfumo huu umedhaminiwa na Mamlaka ya Elimu Tanzania (TEA) kupitia Mfuko wa Kuendeleza Ujuzi (SDF).
       </div>
     </div>
   </footer>
   <!-- End Footer -->
 
+  <!--Back to top-->
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
   
   <!-- Vendor JS Files -->
