--- a/web-kilimo/index.html
+++ b/web-kilimo/index.html
@@ -224,8 +224,8 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up">
               <div class="pic"><img src="assets/img/team/avatar.png" alt=""></div>
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
+              <h4>Dismas Mertus Mguba</h4>
+              <span>Principal Bigwa FDC</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
@@ -236,9 +236,9 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/avatar-25.png" alt=""></div>
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
+              <div class="pic"><img src="assets/img/team/avatar-21.png" alt=""></div>
+              <h4>Alphonce Fidelis Stephano</h4>
+              <span>Project Coordinator</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
@@ -249,9 +249,9 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/avatar-21.png" alt=""></div>
-              <h4>William Anderson</h4>
-              <span>CTO</span>
+              <div class="pic"><img src="assets/img/team/avatar-25.png" alt=""></div>
+              <h4>Theresia Nerei Shayo</h4>
+              <span>Agriculture Tutor</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
@@ -262,8 +262,8 @@
 
           <div class="col-xl-3 col-lg-12 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/avatar-26.png" alt=""></div>
-              <h4>Amanda Jepson</h4>
+              <div class="pic"><img src="assets/img/team/avatar-29.png" alt=""></div>
+              <h4>Ally Tinge Gwaje</h4>
               <span>Accountant</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
@@ -278,8 +278,8 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up">
               <div class="pic"><img src="assets/img/team/avatar-10.png" alt=""></div>
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
+              <h4>Moses Octavian Shoo</h4>
+              <span>Supplies Officer</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
@@ -291,8 +291,8 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="pic"><img src="assets/img/team/avatar-20.png" alt=""></div>
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
+              <h4>Monica Elias Mtundu</h4>
+              <span>Project Coordinator Bigwa FDC</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
@@ -303,9 +303,9 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/avatar-13.png" alt=""></div>
-              <h4>William Anderson</h4>
-              <span>CTO</span>
+              <div class="pic"><img src="assets/img/team/avatar-32.png" alt=""></div>
+              <h4>Sharify Muhibu Abdala</h4>
+              <span>Community Development Officer</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
@@ -316,9 +316,9 @@
 
           <div class="col-xl-3 col-lg-12 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/avatar-11.png" alt=""></div>
-              <h4>Amanda Jepson</h4>
-              <span>Accountant</span>
+              <div class="pic"><img src="assets/img/team/avatar-33.png" alt=""></div>
+              <h4>Mkiwa Yusuph Mrisho</h4>
+              <span>Nutrition Officer</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
@@ -331,9 +331,9 @@
         <div class="row">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up">
-              <div class="pic"><img src="assets/img/team/avatar-1.png" alt=""></div>
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
+              <div class="pic"><img src="assets/img/team/avatar-13.png" alt=""></div>
+              <h4>Pascal Herman Sweya</h4>
+              <span>Training Coordinator Bigwa FDC</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
                 <a href=""><i class="icofont-facebook"></i></a>
@@ -344,7 +344,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/avatar-4.png" alt=""></div>
+              <div class="pic"><img src="assets/img/team/avatar-11.png" alt=""></div>
               <h4>Sarah Jhinson</h4>
               <span>Product Manager</span>
               <div class="social">
@@ -357,7 +357,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/avatar-1.png" alt=""></div>
+              <div class="pic"><img src="assets/img/team/avatar-39.png" alt=""></div>
               <h4>William Anderson</h4>
               <span>CTO</span>
               <div class="social">
@@ -370,7 +370,7 @@
 
           <div class="col-xl-3 col-lg-12 col-md-6">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/avatar-4.png" alt=""></div>
+              <div class="pic"><img src="assets/img/team/avatar-26.png" alt=""></div>
               <h4>Amanda Jepson</h4>
               <span>Accountant</span>
               <div class="social">
