--- a/web-kilimo/index.html
+++ b/web-kilimo/index.html
@@ -63,7 +63,7 @@
             <a href="#" class="get-started"><i class="fas fa-play-circle fa-3x js-modal" data-video-id="githXaBemyI"><span class="ml-3" style="float: right; margin-top: 13px; font-size: 20px;" id="watch">Angalia Video</span></i></a>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-            <img src="assets/img/hero-img.png" class="img-fluid d-none d-md-block" alt="" width="530px">
+            <img src="assets/img/hero-1.png" class="img-fluid d-none d-md-block" alt="" width="530px">
           </div>
         </div>
       </div>
