--- a/web-kilimo/index.html
+++ b/web-kilimo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>e-kilimo</title>
+  <title>e-Kilimo</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
   <!-- Favicons -->
@@ -31,7 +31,7 @@
       
       <!--logo-->
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="#home"><img src="assets/img/e-kilimo.png" alt="" class="img-fluid" id="logo"> e-kilimo<span>.</span></a>
+        <h1 class="text-light"><a href="#home"><img src="assets/img/e-kilimo.png" alt="" class="img-fluid" id="logo"> e-Kilimo<span>.</span></a>
         </h1>
       </div>
       
@@ -136,12 +136,12 @@
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                   <i class="bx bx-receipt" id="receipt"></i>
-                  <h4><a href="#">Maono Yetu</a></h4>
+                  <h4>Maono Yetu</h4>
                   <p>Kuongeza uzalishaji na kukuza kipato cha mkulima.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-cube-alt" id="cube"></i>
-                  <h4><a href="#">Misheni Yetu</a></h4>
+                  <h4>Misheni Yetu</h4>
                   <p>Kuweka njia rahisi ya Mkulima kupata taarifa, Mafunzo, Masoko na kuunganisha na wadau, Taasisi za kilimo, Maduka ya pembejeo na Mitandao ya wakulima kupitia Mitandao na vifaa vya Mawasiliano walivyonavyo wakulima vijijini.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield" id="shield"></i>
-                  <h4><a href="#">Maadili Yetu</a></h4>
+                  <h4>Maadili Yetu</h4>
                   <p>Kufanya kazi kwa bidii kwa kuzingatia matokeo chanya na Endelevu kwa Maendeleo ya Mkulima.</p>
                 </div>
               </div>
@@ -177,7 +177,7 @@
                 <img src="assets/img/agri-tech.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">e-SHAMBA</a></h5>
+                <h5 class="card-title"><a href="e-shamba.html">e-SHAMBA</a></h5>
                 <p class="card-text">
                   Huduma hii ina Vipindi vya Sauti na video Kutoka katika mashamba Darasa yetu,
                   Programu Hizi zitalenga kumjengea uwezo mkulima aweze kufanya kilimo cha kisasa kwa kuona kutoka kwa wataalamu wetu wa kilimo na wakulima wenzao kupitia Rekodi za video.</p>
@@ -228,7 +228,7 @@
               <span>Principal Bigwa FDC</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -241,7 +241,7 @@
               <span>Project Coordinator</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -254,7 +254,7 @@
               <span>Agriculture Tutor</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -267,7 +267,7 @@
               <span>Accountant</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -282,7 +282,7 @@
               <span>Supplies Officer</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -295,7 +295,7 @@
               <span>Project Coordinator Bigwa FDC</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -308,7 +308,7 @@
               <span>Community Development Officer</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -321,7 +321,7 @@
               <span>Nutrition Officer</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -336,7 +336,7 @@
               <span>Training Coordinator Bigwa FDC</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -349,7 +349,7 @@
               <span>Product Manager</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -362,7 +362,7 @@
               <span>CTO</span>
               <div class="social">
                 <a href="tel:+255743312745"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href=""><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -375,7 +375,7 @@
               <span>Accountant</span>
               <div class="social">
                 <a href="tel:+255629498584"><i class="icofont-phone"></i></a>
-                <a href=""><i class="icofont-facebook"></i></a>
+                <a href="" target="_blank"><i class="icofont-facebook"></i></a>
                 <a href="mailto:prospermbuma@gmail.com"><i class="icofont-email"></i></a>
               </div>
             </div>
@@ -413,7 +413,7 @@
             <h3>Android</h3>
             <span><img src="assets/img/phone.jpg" alt="" class="img-fluid py-3"></span>
             <p>
-              Android, kupitia simu janja ya mkononi au Tablet unaweza kuingia Play store na kupakuwa <a hre="#" >Application yetu</a> (e-Kilimo)
+              Android, kupitia simu janja ya mkononi au Tablet unaweza kuingia Play store na kupakuwa <a hre="#" >Application yetu</Maono> (e-Kilimo)
               nakuiweka katika simu yako.
               mfumo huu utampa mkulima urahisi zaidi wa kutumia Mifumo mingine ya e-Kilimo na kuweza kutumia jukwaa la mijadala ya kilimo.
             </p>
@@ -536,9 +536,9 @@
         </div>
 
         <div class="social-links">
-          <a href="https://www.youtube.com/channel/UC5n4_6n_FPTD3sUlpKqfcjQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.youtube.com/channel/UC5n4_6n_FPTD3sUlpKqfcjQ" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+          <a href="#" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="#" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         </div>
 
       </div>
