--- a/web-kilimo/wadau.html
+++ b/web-kilimo/wadau.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>e-kilimo | Wadau</title>
+    <title>e-Kilimo | Wadau</title>
     <!-- Favicons -->
     <link href="assets/img/e-kilimo.png" rel="icon">
     <!-- Google Fonts -->
@@ -30,7 +30,7 @@
         <div class="container d-flex">
             <!--logo-->
             <div class="logo mr-auto">
-                <h1 class="text-light"><a href="#home"><img src="assets/img/e-kilimo.png" alt="" class="img-fluid" id="logo"> e-kilimo<span>.</span></a></h1>
+                <h1 class="text-light"><a href="#home"><img src="assets/img/e-kilimo.png" alt="" class="img-fluid" id="logo"> e-Kilimo<span>.</span></a></h1>
             </div>
             <!-- .nav-menu -->
             <nav class="nav-menu d-none d-lg-block">
@@ -154,7 +154,7 @@
                                     <h4 class="card-title">ASA</h4>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.
                                     </p>
-                                    <a class="btn btn-success" href="asa.html">Read More</a>
+                                    <a class="btn btn-outline-success" href="asa.html">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                                     <h4 class="card-title">YARA</h4>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.
                                     </p>
-                                    <a class="btn btn-success" href="yara.html">Read More</a>
+                                    <a class="btn btn-outline-success" href="yara.html">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                                     <h4 class="card-title">Wakala</h4>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.
                                     </p>
-                                    <a class="btn btn-success" href="#">Read More</a>
+                                    <a class="btn btn-outline-success" href="#">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -283,7 +283,7 @@
                                     <h4 class="card-title">TMA</h4>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.
                                     </p>
-                                    <a class="btn btn-success" href="#">Read More</a>
+                                    <a class="btn btn-outline-success" href="#">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -458,9 +458,9 @@
                 </div>
                 
                 <div class="social-links">
-                    <a href="https://www.youtube.com/channel/UC5n4_6n_FPTD3sUlpKqfcjQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-                    <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                    <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://www.youtube.com/channel/UC5n4_6n_FPTD3sUlpKqfcjQ" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+                    <a href="#" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+                    <a href="#" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 </div>
             </div>
         </div>
