--- a/web-kilimo/e-shamba.html
+++ b/web-kilimo/e-shamba.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>e-kilimo | Wadau</title>
+    <title>e-Kilimo | Wadau</title>
     <!-- Favicons -->
     <link href="assets/img/e-kilimo.png" rel="icon">
     <!-- Google Fonts -->
@@ -30,7 +30,7 @@
         <div class="container d-flex">
             <!--logo-->
             <div class="logo mr-auto">
-                <h1 class="text-light"><a href="#home"><img src="assets/img/e-kilimo.png" alt="" class="img-fluid" id="logo"> e-kilimo<span>.</span></a></h1>
+                <h1 class="text-light"><a href="#home"><img src="assets/img/e-kilimo.png" alt="" class="img-fluid" id="logo"> e-Kilimo<span>.</span></a></h1>
             </div>
             <!-- .nav-menu -->
             <nav class="nav-menu d-none d-lg-block">
@@ -121,9 +121,9 @@
 
                 <div class="col-lg-4 col-md-6 picha-item filter-app">
                     <div class="picha-wrap">
-                        <img src="assets/img/Photos/shamba-4.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/Photos/shamba-3.jpg" class="img-fluid" alt="">
                         <div class="picha-links">
-                            <a href="assets/img/Photos/shamba-4.jpg" data-gall="portfolioGallery" class="venobox" title="shamba"><i class="icofont-plus-circle"></i></a>
+                            <a href="assets/img/Photos/shamba-3.jpg" data-gall="portfolioGallery" class="venobox" title="shamba"><i class="icofont-plus-circle"></i></a>
                             <a href="#" title="More Details"><i class="icofont-link"></i></a>
                         </div>
                         <div class="picha-info">
@@ -177,9 +177,9 @@
 
                 <div class="col-lg-4 col-md-6 picha-item filter-app">
                     <div class="picha-wrap">
-                        <img src="assets/img/Photos/shamba.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/Photos/shamba-6.jpg" class="img-fluid" alt="">
                         <div class="picha-links">
-                            <a href="assets/img/Photos/shamba.jpg" data-gall="portfolioGallery" class="venobox" title="shamba"><i class="icofont-plus-circle"></i></a>
+                            <a href="assets/img/Photos/shamba-6.jpg" data-gall="portfolioGallery" class="venobox" title="shamba"><i class="icofont-plus-circle"></i></a>
                             <a href="#" title="More Details"><i class="icofont-link"></i></a>
                         </div>
                         <div class="picha-info">
@@ -205,9 +205,9 @@
 
                 <div class="col-lg-4 col-md-6 picha-item filter-app">
                     <div class="picha-wrap">
-                        <img src="assets/img/Photos/shamba-4.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/Photos/wakulima.jpg" class="img-fluid" alt="">
                         <div class="picha-links">
-                            <a href="assets/img/Photos/shamba-4.jpg" data-gall="portfolioGallery" class="venobox" title="shamba"><i class="icofont-plus-circle"></i></a>
+                            <a href="assets/img/Photos/wakulima.jpg" data-gall="portfolioGallery" class="venobox" title="shamba"><i class="icofont-plus-circle"></i></a>
                             <a href="#" title="More Details"><i class="icofont-link"></i></a>
                         </div>
                         <div class="picha-info">
@@ -244,9 +244,9 @@
                 </div>
                 
                 <div class="social-links">
-                    <a href="https://www.youtube.com/channel/UC5n4_6n_FPTD3sUlpKqfcjQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-                    <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                    <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://www.youtube.com/channel/UC5n4_6n_FPTD3sUlpKqfcjQ" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+                    <a href="#" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+                    <a href="#" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 </div>
             </div>
         </div>
