Wadau Mawasiliano sections have been modified

--- a/web-kilimo/wadau.html
+++ b/web-kilimo/wadau.html
@@ -139,7 +139,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="body">
-                                    <h4 class="card-title">MERU-AGRO</h4>
+                                    <h4 class="card-title">MERU AGRO</h4>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, perspiciatis.
                                     </p>
                                     <a class="btn btn-outline-success" href="meru.html">Read More</a>
